add methods on vaccine efficacy

--- a/methods.Rmd
+++ b/methods.Rmd
@@ -46,7 +46,7 @@ Where for the index variant $F^v = 0$, for a variant with immune escape relative
 
 Among these model parameters, $\mu^*_{s,0}$, $F^v$, $H$, $\sigma^2$ can be estimated from neutralisation assay experiments. The parameters $n_{o,50}$ (one per outcome) and $k$ (one in total) must be learned by fitting the model to data on population-level vaccine efficacy. In this Bayesian implementation, the parameter $\sigma^2$ is kept fixed at the value estimated by [Cromer et al. (2021)](https://doi.org/10.1016/S2666-5247(21)00267-6), $\mu^*_{s,0}$, $F^v$, and $h$ are given informative priors based on estimates from [Khoury et al. (2020)](https://doi.org/10.1038/s41591-021-01377-8) and [Cromer et al. (2021)](https://doi.org/10.1016/S2666-5247(21)00267-6), and the remaining parameters are given less  informative priors. This enables the model to update these parameters slightly based on the data, and fully incorporate uncertainty in these parameters into predictions.
 
-This model is fitted to estimates from [Andrews et al. (2021)](https://doi.org/10.1101/2021.09.15.21263583) of the population-level efficacy of the Pfizer and AstraZeneca vaccines (two doses) against clinical outcomes (death, severe disease, symptomatic infection) from the Delta variant over different periods of time post-administration, and estimates from [Pouwels et al. (2021)](ttps://doi.org/10.1101/2021.09.28.21264260) and from [Eyre et al. (2021)](https://doi.org/10.1101/2021.09.28.21264260) against acquisition (symptomatic or asymptomatic) and onward transmission of breakthrough infections, respectively, of the Delta variant.
+This model is fitted to estimates from [Andrews et al. (2021a)](https://doi.org/10.1101/2021.09.15.21263583) of the population-level efficacy of the Pfizer and AstraZeneca vaccines (two doses) against clinical outcomes (death, severe disease, symptomatic infection) from the Delta variant over different periods of time post-administration, and estimates from [Pouwels et al. (2021)](ttps://doi.org/10.1101/2021.09.28.21264260) and from [Eyre et al. (2021)](https://doi.org/10.1101/2021.09.28.21264260) against acquisition (symptomatic or asymptomatic) and onward transmission of breakthrough infections, respectively, of the Delta variant.
 
 The model likelihood for vaccine efficacy estimate $j$ is defined as a normal distribution over the logit-transformed estimate $\text{VE}_j$, with mean given by the logit-transformed predicted efficacy for that combination of source, days post-administration, outcome, and variant $P_{s_j,d_j,o_j,v_j}$ and with variance given by the sum of the square of the standard error of the estimate on the logit scale $\text{logit-SE}^2_{j}$ (approximated from provided uncertainty intervals), and an additional variance term $\sigma^2_{\text{ve}}$, to represent any additional errors in these estimates that may arise from inference on observational data:
 
@@ -121,6 +121,10 @@ $R_{\text{eff}}^\text{O}/R_{\text{eff}}^\Delta \sim N(\hat{R}_{\text{eff}}^\text
  
 $R_{\text{eff}}^\text{O}/R_{\text{eff}}^\Delta = 2.1$ and $\sigma_\text{Reff} = 0.41$ to match the distribution from Pearson (across estimates with the same and different generation intervals between variants.
 
+
+### Omicron vaccine efficacy estimates
+
+[Andrews et al. (2021b)](https://doi.org/10.1101/2021.12.14.21267615) provide estimates of vaccine efficacy against Omicron for different products, numbers of doses, and periods post-vaccination. These estimates provide direct information on the degree of immune escape of Omicron versus Delta. The provided estimates for efficacy of AstraZeneca vaccination against Omicron are however highly uncertain and have negative point estimates, and the authors note that these estimates are likely to be untrustworthy due to the fact that AstraZeneca vaccinees are more likely to be vulnerable (and so more prone to clinical disease). For this reason, estimates of efficacy of vaccination with the AstraZeneca vaccine were excluded, as were any efficacy estimates computed on fewer than 10 Omicron cases (e.g. Pfizer dose 2 in the period immediately following vaccination). Estimates are also provided of vaccine efficacy against Delta. Among Delta estimates, the majority are likely to have been computed using the same underlying data as was used to estimate the efficacies against clinical disease in the baseline model, however the efficacy estimate for booster doses against Delta is independent of these, and so we include this. These additional vaccine efficacy estimates were used to inform the model with a likelihood defined as described above.
 
 ### Fitting the model
 
