Adjust VE for hybrid-immunity: - caps out immunity against Omicron from >1 dose + Omicron infection infection as equivalent of mRNA booster against ancestral strain. Also - add option for hypothetical variant with additional immune escape e.g. BA.4 or BA.5 if necessary for scenario, - fix typo

--- a/methods.Rmd
+++ b/methods.Rmd
@@ -20,7 +20,7 @@ This document describes the methods used to delineate plausible values of the in
 
 The core of this analysis is a Bayesian implementation of a predictive model of vaccine efficacy documented and validated in [Khoury et al. (2020)](https://doi.org/10.1038/s41591-021-01377-8) and [Cromer et al. (2021)](https://doi.org/10.1016/S2666-5247(21)00267-6). The original publications estimate parameters by maximum likelihood, and focus on predicting vaccine efficacies for different combinations of vaccine dose and product, the outcome against which efficacy is measured, and the SARS-CoV-2 variant, based on neutralising antibody titres. See those publications for detailed analysis and validation.
 
-This model assumes that each immune individual $i$ in a population has some neutralisation level$n_{i,v}$ to variant $v$, given by the common (ie. base 10) logarithm of the titre of neutralising antibody, relative to the mean neutralisation level produced by infection with wild-type SARS-CoV-2. This indexing on wild-type convalescent neutralisation levels enables comparability between studies and across variants. The individual's neutralisation level is assumed to be drawn from a normal distribution with mean $\mu_{s,d,v}$ differing based on the source of their immunity $s$ (e.g. the vaccine dose or product), the number of days $d$ post-peak immunity (ie. the degree of waning) adnd the variant, and with variance $\sigma^2$ giving the inter-individual variation in neutralisation levels - assumed to be constant across variants, sources of immunity, and levels of waning:
+This model assumes that each immune individual $i$ in a population has some neutralisation level$n_{i,v}$ to variant $v$, given by the common (ie. base 10) logarithm of the titre of neutralising antibody, relative to the mean neutralisation level produced by infection with wild-type SARS-CoV-2. This indexing on wild-type convalescent neutralisation levels enables comparability between studies and across variants. The individual's neutralisation level is assumed to be drawn from a normal distribution with mean $\mu_{s,d,v}$ differing based on the source of their immunity $s$ (e.g. the vaccine dose or product), the number of days $d$ post-peak immunity (ie. the degree of waning) and the variant, and with variance $\sigma^2$ giving the inter-individual variation in neutralisation levels - assumed to be constant across variants, sources of immunity, and levels of waning:
 
 $n_{i,v} \sim N(\mu_{s,d,v}, \sigma^2)$
     
